2005-07-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_[sg]et_property):
	Add GTK_FILE_CHOOSER_PROP_DO_OVERWRITE_CONFIRMATION. 

2005-07-19  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c: Added a few utility functions for
	profiling; instrument the code, make it conditional.

2005-07-19  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkentry.c (gtk_entry_move_forward_word): don't iterate
	past the end of the string, so pango_layout_get_cursor_pos() won't
	complain. (#309211, Tommi Komulainen).

2005-07-19  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkmain.c (check_sizeof_GtkWindow, check_sizeof_GtkBox):
	Don't bother mentioning the -fnative-struct (used by GCC 2) switch
	in the error message any longer.

2005-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkpixbuf-render.c: Small formatting fixes in doc comments. 

	* gtk/gtkcombobox.c (gtk_combo_box_model_row_deleted) 
	(gtk_combo_box_model_row_inserted): Remove useless calls
	to gtk_tree_row_reference_inserted/deleted, since we
	don't use manual row references here. 

	* gtk/gtkmain.c (gtk_parse_args, gtk_init_with_args): Call
	gettext_initialization before checking gtk_initialized, otherwise
	there are scenarios where it is not called at all. For an
	example, see tests/testfilechooserbutton.c.  (#310323, 
	Arkady L. Shane)

2005-07-18  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkgc-win32.c (gdk_win32_hdc_get): Be sure to remove
	any possible leftover clipping region in the DC if we don't want
	any clipping. Thanks to Robert Ögren. (#309823)

	* configure.in (GDK_EXTRA_LIBS): [Win32] Bypass libtool, use
	-Wl,-luuid. This avoids a libtool warning as libuuid is static.

2005-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_set_focus_on_click): Propagate
	the focus-on-click value to the button.  (#310543, Christian Persch)

	* gtk/gtkwidget.c (gtk_widget_set_double_buffered): Add a note